fixed signin/register alignments, fixed navbar when not signed in

--- a/app/javascript/stylesheets/_forms.scss
+++ b/app/javascript/stylesheets/_forms.scss
@@ -3,7 +3,8 @@
 .form-grand-parent  {
   display:table;
   height:100%;
-  margin: 30% auto;
+  margin: 0 auto;
+  padding-top: 100px;
   .form-parent {
     display:table-cell;
     vertical-align:middle;
